--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
+    <div class="app-logo">
+      <h2><div>YouTube*</div><div class="clone-text">*clone</div></h2>
+    </div>
     <div class="container"></div>
   </body>
   <script src="/bundle.js"></script>
